# swagger_output.json
@@ -43,17 +43,31 @@
   "paths": {
     "/api/users/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "summary": "List all Users",
+        "description": "Returns a list of all users, optionally filtered by search term",
         "parameters": [
           {
             "name": "authorization",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "search",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "description": "A search term to filter the list of users"
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/UserList"
+            }
           },
           "401": {
             "description": "Unauthorized"
@@ -66,13 +80,18 @@
     },
     "/api/users/{id}/friends": {
       "get": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "summary": "Get Users friends",
+        "description": "Returns array of Users, that are friends with current user",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "ID of User whose friends requesting"
           },
           {
             "name": "authorization",
@@ -82,7 +101,10 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/UserList"
+            }
           },
           "401": {
             "description": "Unauthorized"
@@ -95,13 +117,18 @@
     },
     "/api/users/{username}": {
       "get": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "summary": "User Detail",
+        "description": "Returns extended user object",
         "parameters": [
           {
             "name": "username",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "username of user account"
           },
           {
             "name": "authorization",
@@ -111,13 +138,16 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/UserDetail"
+            }
           },
           "401": {
             "description": "Unauthorized"
           },
-          "404": {
-            "description": "Not Found"
+          "403": {
+            "description": "User not found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -127,7 +157,11 @@
     },
     "/api/users/{id}": {
       "put": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "summary": "Update user",
+        "description": "Returns extended user object",
         "parameters": [
           {
             "name": "id",
@@ -141,13 +175,38 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "data",
             "in": "body",
+            "required": false,
             "schema": {
               "type": "object",
               "properties": {
-                "albumId": {
-                  "example": "any"
+                "email": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "string"
+                    }
+                  }
+                },
+                "password": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "string"
+                    }
+                  }
+                },
+                "profileName": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "string"
+                    }
+                  }
                 }
               }
             }
@@ -158,16 +217,19 @@
             "description": "OK"
           },
           "201": {
-            "description": "Created"
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/UserDetail"
+            }
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Validation error"
           },
           "401": {
             "description": "Unauthorized"
           },
-          "404": {
-            "description": "Not Found"
+          "403": {
+            "description": "Forbidden"
           },
           "500": {
             "description": "Internal Server Error"
@@ -175,7 +237,11 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "summary": "Delete user",
+        "description": "Returns extended user object",
         "parameters": [
           {
             "name": "id",
@@ -191,7 +257,7 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "OK"
           },
           "401": {
             "description": "Unauthorized"
@@ -204,13 +270,18 @@
     },
     "/api/users/{id}/like": {
       "put": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "summary": "Like post",
+        "description": "Returns extended user object",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "ID of user"
           },
           {
             "name": "authorization",
@@ -218,16 +289,15 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "data",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "postId": {
-                  "example": "any"
-                },
-                "albumId": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 111
                 }
               }
             }
@@ -235,16 +305,16 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/UserDetail"
+            }
           },
           "401": {
             "description": "Unauthorized"
           },
           "403": {
-            "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
+            "description": "User not found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -254,7 +324,11 @@
     },
     "/api/users/friends/remove": {
       "put": {
-        "description": "",
+        "tags": [
+          "Users"
+        ],
+        "summary": "Unfriend user",
+        "description": "Returns extended user object",
         "parameters": [
           {
             "name": "authorization",
@@ -262,19 +336,22 @@
             "type": "string"
           },
           {
-            "name": "body",
+            "name": "id",
+            "in": "param",
+            "required": true,
+            "type": "string",
+            "description": "ID of user"
+          },
+          {
+            "name": "data",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "id": {
-                  "example": "any"
-                },
                 "friendId": {
-                  "example": "any"
-                },
-                "albumId": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "UUID"
                 }
               }
             }
@@ -282,13 +359,16 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/UserList"
+            }
           },
           "401": {
             "description": "Unauthorized"
           },
-          "404": {
-            "description": "Not Found"
+          "403": {
+            "description": "Forbidden"
           },
           "500": {
             "description": "Internal Server Error"
@@ -1204,10 +1284,51 @@
         "email": {
           "type": "string",
           "example": "thisIsTheemail@gmail.com"
-        },
-        "password": {
+        }
+      }
+    },
+    "UserList": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/User"
+      }
+    },
+    "UserDetail": {
+      "type": "object",
+      "properties": {
+        "id": {
           "type": "string",
-          "example": "userPassword"
+          "example": "152521515"
+        },
+        "username": {
+          "type": "string",
+          "example": "SomeName"
+        },
+        "profileName": {
+          "type": "string",
+          "example": "Dude 1"
+        },
+        "email": {
+          "type": "string",
+          "example": "thisIsTheemail@gmail.com"
+        },
+        "followedAlbums": {
+          "$ref": "#/definitions/AlbumList"
+        },
+        "ownedAlbums": {
+          "$ref": "#/definitions/AlbumList"
+        },
+        "friends": {
+          "$ref": "#/definitions/UserList"
+        },
+        "friendedBy": {
+          "$ref": "#/definitions/UserList"
+        },
+        "likedPost": {
+          "$ref": "#/definitions/PostList"
+        },
+        "posts": {
+          "$ref": "#/definitions/PostList"
         }
       }
     },
@@ -1306,6 +1427,12 @@
             "type": "string"
           }
         }
+      }
+    },
+    "AlbumList": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/Album"
       }
     },
     "AddAlbum": {
@@ -1493,6 +1620,45 @@
               "example": 47
             }
           }
+        },
+        "description": {
+          "type": "string",
+          "example": "Nie vsetky dobre veci su napovrchu"
+        },
+        "userId": {
+          "type": "string",
+          "example": "152521515"
+        },
+        "albumId": {
+          "type": "number",
+          "example": 111
+        },
+        "locationId": {
+          "type": "number",
+          "example": 145
+        }
+      }
+    },
+    "PostList": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/Post"
+      }
+    },
+    "AddPost": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 15
+        },
+        "title": {
+          "type": "string",
+          "example": "Potapanie sa"
+        },
+        "photo": {
+          "type": "string",
+          "example": "Base64String"
         },
         "description": {
           "type": "string",
